<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/loged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bouton_ecoles"
            style="@style/bouton"
            android:layout_weight="1"
            android:background="@drawable/bouton_selector"
            android:drawableTop="@drawable/ic_menu_ecole"
            android:onClick="ecoles"
            android:text="@string/bouton_ecoles" />

        <Button
            android:id="@+id/bouton_ue"
            style="@style/bouton"
            android:layout_weight="1"
            android:background="@drawable/bouton_selector"
            android:drawableTop="@drawable/ic_menu_ue"
            android:onClick="ue"
            android:text="@string/bouton_ue" />

        <Button
            android:id="@+id/bouton_profil"
            style="@style/bouton"
            android:layout_weight="1"
            android:background="@drawable/bouton_selector"
            android:drawableTop="@drawable/ic_menu_login"
            android:onClick="profil"
            android:text="@string/bouton_profil" />
    </LinearLayout>

</RelativeLayout>